--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.286.0",
     "next": "13.5.4",
     "next-cloudinary": "^4.27.0",
